updated public files

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
 
 <body>
   <div id="reservationModule"></div>
+  <br>
+  <br>
+  <div id="calendarModule"></div>
   <script src="bundle.js"></script>
 </body>
 </html>
